[gd_scene load_steps=15 format=3 uid="uid://usdfp6fqxnev"]

[ext_resource type="Script" uid="uid://b1feq0lta5uai" path="res://example/table.gd" id="1_trlmi"]
[ext_resource type="Script" uid="uid://bklf1k5ntdamo" path="res://addons/card_3d/scripts/drag_controller.gd" id="2_07uyt"]
[ext_resource type="PackedScene" uid="uid://d1uvcisduvvj" path="res://addons/card_3d/scenes/card_collection_3d.tscn" id="3_pqjp5"]
[ext_resource type="Script" uid="uid://c5654am7e8aul" path="res://addons/card_3d/scripts/card_layouts/line_card_layout.gd" id="4_t7f8m"]
[ext_resource type="Script" uid="uid://dbuw78ioupc4i" path="res://addons/card_3d/scripts/card_layouts/fan_card_layout.gd" id="5_rd2gk"]
[ext_resource type="PackedScene" uid="uid://bjx4ugu14qx3w" path="res://example/face_card_3d.tscn" id="6_qtugc"]

[sub_resource type="Resource" id="Resource_7ym11"]
script = ExtResource("5_rd2gk")
metadata/_custom_type_script = "uid://dbuw78ioupc4i"

[sub_resource type="Resource" id="Resource_k5q5m"]
script = ExtResource("5_rd2gk")
metadata/_custom_type_script = "uid://dbuw78ioupc4i"

[sub_resource type="Resource" id="Resource_yq80r"]
script = ExtResource("4_t7f8m")

[sub_resource type="Resource" id="Resource_w17iw"]
script = ExtResource("5_rd2gk")

[sub_resource type="Resource" id="Resource_13txa"]
script = ExtResource("5_rd2gk")
metadata/_custom_type_script = "uid://dbuw78ioupc4i"

[sub_resource type="PlaneMesh" id="PlaneMesh_gv0to"]
size = Vector2(40, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_glsqp"]
albedo_color = Color(0.207843, 0.396078, 0.301961, 1)

[sub_resource type="BoxMesh" id="BoxMesh_g1lkx"]
size = Vector3(2.5, 3.5, 0.2)

[node name="Node3D" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0885658)
shadow_enabled = true
shadow_opacity = 0.65
shadow_blur = 5.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9)
current = true
fov = 84.375

[node name="Table" type="Node3D" parent="."]
script = ExtResource("1_trlmi")

[node name="DragController" type="Node3D" parent="Table"]
script = ExtResource("2_07uyt")

[node name="Hand4" parent="Table/DragController" instance=ExtResource("3_pqjp5")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 10, 0, 0)
card_layout_strategy = SubResource("Resource_7ym11")

[node name="Hand3" parent="Table/DragController" instance=ExtResource("3_pqjp5")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -10, 0, 0)
card_layout_strategy = SubResource("Resource_k5q5m")

[node name="TableCards" parent="Table/DragController" instance=ExtResource("3_pqjp5")]
card_layout_strategy = SubResource("Resource_yq80r")

[node name="Hand" parent="Table/DragController" instance=ExtResource("3_pqjp5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0.5)
card_layout_strategy = SubResource("Resource_w17iw")

[node name="Hand2" parent="Table/DragController" instance=ExtResource("3_pqjp5")]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 5, 0)
card_layout_strategy = SubResource("Resource_13txa")

[node name="TableSurface" type="MeshInstance3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -1)
mesh = SubResource("PlaneMesh_gv0to")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_glsqp")

[node name="Deck" parent="." instance=ExtResource("6_qtugc")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 11.0863, 4.88531, -0.686903)
rank = 14
suit = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Deck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.111376)
mesh = SubResource("BoxMesh_g1lkx")

[connection signal="card_3d_mouse_up" from="Deck" to="Table" method="_on_face_card_3d_card_3d_mouse_up"]
